--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "amqp-coffee": "^0.1.31",
+    "mocha": "^5.0.5",
     "newrelic": "^3.3.0"
+  },
+  "devDependencies": {
+    "@newrelic/test-utilities": "^1.2.0"
   }
 }
