--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "newrelic": "^3.3.0"
   },
   "devDependencies": {
-    "@newrelic/test-utilities": "^1.2.0"
+    "@newrelic/test-utilities": "^1.2.0",
+    "chai": "^4.1.2"
   }
 }
