--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "amqp-coffee": "^0.1.31",
-    "mocha": "^5.0.5",
+  "peerDependencies": {
     "newrelic": "^3.3.0"
   },
   "devDependencies": {
     "@newrelic/test-utilities": "^1.2.0",
-    "chai": "^4.1.2"
+    "amqp-coffee": "^0.1.31",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.5",
+    "newrelic": "^3.3.0"
   }
 }
