--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
-- '6'
-- '8'
+  - '6'
+  - '8'
+servies:
+  - rabbitmq
 deploy:
   provider: npm
   email: integration-dev@thomascookonline.com
