--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "mocha"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tcdl/newrelic-amqp-coffee.git"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
