--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "newrelic": "^3.3.0"
   },
@@ -22,6 +21,6 @@
     "amqp-coffee": "^0.1.31",
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
-    "newrelic": "^3.3.0"
+    "newrelic": "^4.8.1"
   }
 }
