--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newrelic-amqp-coffee",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A NewRelic instrumentation for amqp-coffee",
   "main": "./lib/index.js",
   "scripts": {
@@ -12,8 +12,7 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "newrelic": "^3.3.0"
   },
@@ -22,6 +21,6 @@
     "amqp-coffee": "^0.1.31",
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
-    "newrelic": "^3.3.0"
+    "newrelic": "^4.8.1"
   }
 }
